--- a/public/desktop.html
+++ b/public/desktop.html
@@ -23,6 +23,7 @@
     <![endif]-->
 </head>
 <body style="margin: 0px;">
+    <p style="width: 100%; height: 400px;line-height: 400px;color: #b20;text-align:center;">网站其他内容</p>
     
     <!-- 游戏的dom部分 -->
     <div class="snake-container-wrap">
@@ -74,7 +75,7 @@
                         <p>“参与奖”抱回家：</p>
                         <p>一张50元我买网红包</p>
                     </div>
-                    <p>继续冲击贪吃大奖吧！</p>
+                    <p style="margin-top: 20px;">继续冲击贪吃大奖吧！</p>
                 </div>
                 <div class="foot-section">
                     <button class="snake-modal-btn restart">
@@ -83,7 +84,7 @@
                     <button class="snake-modal-btn share">
                         告诉朋友们
                     </button>
-                    <p style="text-align: right; margin-bottom: 0px;">
+                    <p style="margin-top: 20px;text-align: right; margin-bottom: 0px;">
                         分享就有18元牛奶产品礼券抱回家哦！
                     </p>
                 </div>
@@ -157,6 +158,8 @@
         </div>
     </div>
 
+    <p style="width: 100%; height: 400px;line-height: 400px;color: #b20;text-align:center;">网站其他内容</p>
+    
     <!--分享好友列表-->
 
 <div class="tk-share share-605" id="_friend_xxx" style="display:none;">
