--- a/public/mobile.html
+++ b/public/mobile.html
@@ -9,7 +9,7 @@
     
 </head>
 <body style="margin: 0px;">
-    <p style="width: 100%; height: 300px;"></p>
+    <p style="text-align:center;width: 100%; height: 300px;line-height: 300px;color: #b20">网页其他内容</p>
     <div class="snake-container-wrap">
         <div class="snake-container">
         	<div class="header">
@@ -36,13 +36,44 @@
                 <canvas class='canvas' id="snake" width="600" height="600"></canvas>
             </div>
         </div>
-        <div class="snake-loading-pane hide">
-            <h1>loading...</h1>
-            <button class='snake-modal-btn hide'>开始游戏</button>
+
+        <div class="snake-modal-overlay">
+        </div>
+        <div class="start-modal">
+            <button>开始游戏</button>
+        </div>
+
+        <div class="share-modal hide">
+            <p>恭喜您！</p>
+            <p>已获得50元我买网红包</p>
+            <p style="margin-bottom: 20px">继续冲击贪吃大奖吧！</p>
+            <button>再来一局</button>
+        </div>
+
+        <div class="gameover-modal hide">
+            <div class='modal-inner'>
+                <div class="tips">
+                    <p>你竟然得了</p>
+                    <p><span class='score'>200</span>分</p>
+                    <p>年兽还没吃饱，还有可能出没哦！</p>
+                    <p>继续加油吧</p>
+                </div>
+                <div class="gift hide">
+                    <img src="images/redbag.png" width="50" height="50"> 
+                    <p>
+                        <span>获得50元我买网红包的同时</span><br>
+                        <span>会分享您的本局成绩哦</span>
+                    </p>
+                </div>
+                <div class="btns">
+                    <button class="restart">再来一局</button>
+                    <button class="share hide">立即获得红包</button>
+                </div>
+            </div>
         </div>
     </div>
 
-    <p style="width: 100%; height: 300px;"></p>
+    <p style="text-align: center;width: 100%; height: 300px;line-height: 300px;color: #b20">网页其他内容</p>
 
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery.hammer.min.js">
